# gif4000

./: .gitignore  app_control.py  bluetooth.py  bluetooth_watchdog.py  bluetoothctl.py  display.py  gif4000.py  index.html  pyproject.toml  requirement.txt  rest_piwigo.py  send_image.py  share.py  simon_serial.py  sound.py
images_web/: black.xcf
public_html/: index.php  send-email.php  send-file.php
showroom/: index.php
simon_interface/: simon_interface.ino
templates/: index.html
