[project]
name = "gif4000"
version = "1.0.0"
description = "gifomaton of the future"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
    "argparse>=1.4.0",
    "pycurl>=7.45.7",
    "pynput>=1.8.1",
    "python-ffmpeg>=2.0.12",
    "pytimedinput>=2.0.1",
    "requests>=2.32.5",
    "typing-extensions>=3.10.0.2",
]

[dependency-groups]
dev = [
    "aiosignal==1.2.0",
    "async-timeout==4.0.1",
    "attrs==21.2.0",
    "babel==2.8.0",
    "bcrypt==3.2.0",
    "beautifulsoup4==4.10.0",
    "blinker==1.4",
    "certifi==2020.6.20",
    "chardet==4.0.0",
    "charset-normalizer==2.0.6",
    "click==8.0.3",
    "colorama==0.4.4",
    "configobj==5.0.6",
    "cryptography==3.4.8",
    "cython==3.0.10",
    "decorator==4.4.2",
    "distro==1.7.0",
    "dnspython==2.1.0",
    "fasteners==0.14.1",
    "future==0.18.2",
    "html5lib==1.1",
    "httplib2==0.20.2",
    "idna==3.3",
    "img2pdf==0.4.2",
    "importlib-metadata==4.6.4",
    "jeepney==0.7.1",
    "jinja2==3.0.3",
    "keyring==23.5.0",
    "keyrings-alt==4.1.0",
    "launchpadlib==1.10.16",
    "lazr-restfulclient==0.14.4",
    "lazr-uri==1.0.6",
    "lockfile==0.12.2",
    "macaroonbakery==1.3.1",
    "mako==1.1.3",
    "markdown==3.3.6",
    "markupsafe==2.0.1",
    "monotonic==1.6",
    "more-itertools==8.10.0",
    "msgpack==1.0.3",
    "multidict==5.1.0",
    "netifaces==0.11.0",
    "networkx==2.4",
    "numpy==1.26.4",
    "oauthlib==3.2.0",
    "olefile==0.46",
    "opencv-python==4.9.0.80",
    "packaging==21.3",
    "paramiko==2.9.3",
    "pexpect==4.8.0",
    "pillow==9.0.1",
    "playsound==1.2.2",
    "progressbar==2.5",
    "protobuf==3.12.4",
    "psutil==5.9.0",
    "ptyprocess==0.7.0",
    "pure-python-adb==0.3.0.dev0",
    "pycairo==1.20.1",
    "pycryptodome==3.20.0",
    "pycryptodomex==3.11.0",
    "pydub==0.25.1",
    "pygments==2.11.2",
    "pyjwt==2.3.0",
    "pymacaroons==0.13.0",
    "pynacl==1.5.0",
    "pynvim==0.4.2",
    "pyopenssl==21.0.0",
    "pyparsing==2.4.7",
    "pyrfc3339==1.1",
    "python-dateutil==2.8.1",
    "python-gnupg==0.4.8",
    "python-magic==0.4.24",
    "pytz==2022.1",
    "pyxdg==0.27",
    "scons==4.0.1",
    "scour==0.38.2",
    "screeninfo==0.8.1",
    "secretstorage==3.3.1",
    "six==1.16.0",
    "soupsieve==2.3.1",
    "ssh-import-id==5.11",
    "tabulate==0.8.9",
    "termcolor==2.4.0",
    "typing-extensions==3.10.0.2",
    "unidiff==0.5.5",
    "urllib3==1.26.5",
    "wadllib==1.3.6",
    "webencodings==0.5.1",
    "xdg==5",
    "zipp==1.0.0",
]
